<resources>
    <string name="app_name">GSB-RV</string>
    <string name="matricule">Matricule</string>
    <string name="mdp">Mot de passe</string>
    <string name="valider">valider</string>
    <string name="annuler">annuler</string>
    <string name="saisirRDV">Consulter un rapport de visite</string>
    <string name="consulterRDV">Saisir un rapport de visite</string>
    <string name="retour">←</string>
    <string name="deconnection">Se déconnecter</string>
    <string name="title_activity_liste_rv">ListeRvActivity</string>
    <string name="ModifDate">Modifier la date</string>
    <string name="PraticienTV">Praticien :</string>
    <string name="Praticien"></string>
    <string name="MotifTV">Motif :</string>
    <string name="Motif"></string>
    <string name="BilanTV">Bilan :</string>
    <string name="Bilan"></string>
    <string name="CoeffConfianceTV">Coefficient de confiance :</string>
    <string name="CoeffConfiance"></string>


    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>